# realtime-orders-platform

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: nginx.conf
docs/: architecture.md  deployment-aws.md  query-optimisation.md  query-optimization.md
docs/adr/: 0001-split-core-and-realtime-services.md  0002-postgres-listen-notify-for-events.md  0003-cpp-pick-path-engine.md  0004-zero-cost-deploy-ready-posture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  config.ts  env.d.ts  style.css  types.ts
frontend/src/components/: ConnectionBadge.vue  DemoButton.vue  LiveOrders.vue  PickPathViz.vue  StatusBadge.vue  StockPanel.vue  TopSellers.vue
frontend/src/composables/: useWebSocket.ts
frontend/src/stores/: dashboard.spec.ts  dashboard.ts
native/: bench_pickpath.py
native/pickpath/: README.md  pyproject.toml
native/pickpath-native/: CMakeLists.txt  pyproject.toml
native/pickpath-native/src/: main.cpp
native/pickpath/src/pickpath/: __init__.py  reference.py  types.py
native/pickpath/tests/: conftest.py  test_parity.py  test_reference.py
scripts/: smoke_e2e.py
services/core/: Dockerfile  docker-entrypoint.sh  pyproject.toml
services/core/analytics/: urls.py  (+1 more)
services/realtime/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
(+46 files in other folders)
