[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "pickpath-native"
version = "1.0.0"
description = "C++ pick-path optimisation engine for the pickpath package (pybind11)"
authors = [{ name = "Ariyan Mohammed Tipu", email = "ariyantipu39@gmail.com" }]
requires-python = ">=3.12"
license = { text = "MIT" }
